# danirut-zero-to-prod

./: .dockerignore  Cargo.toml  Dockerfile  spec.yaml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
