[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-prod"


[dependencies]
axum = "0.7.5"
hyper = "1.4.1"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"

[dev-dependencies]
reqwest = "0.12.5"
