[package]
name = "zero-to-prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero-to-prod"


[dependencies]
axum = "0.7.5"
hyper = "1.4.1"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
config = "0.11"
dotenvy = "0.15.7"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["std", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
secrecy = { version = "0.10.3", features = ["serde"] }
tower-http = { version = "0.6.1", features = ["request-id", "trace", "util"] }
serde-aux = "4.5.0"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.8.2"
default-features = false
features = [
    "runtime-tokio",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "tls-rustls"
]

[build-dependencies]
syn = "1"

[dev-dependencies]
reqwest = "0.12.5"
